Wording, typos in content

--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -102,7 +102,7 @@
 <div class="hero-section w-full mt-10 text-center md:text-left" [background]="'assets/bg-spatial.jpg'" [flip]="true">
     <h1 class="text-2xl md:text-3xl">Spatially enabled</h1>
     <p class="md:text-lg xl:text-xl pb-4">Have you thought about how much more we are relying on digital maps and navigation systems over the past few decades? With the world-breaking advent of digitalization and informatics ceasing into basic literacy in business and everyday life, new trends are emerging. As spatial algorithms and systems becoming more common, our location awareness is also firmly increasing. Spatiality is slowly becoming an essential part of decision making and business intelligence.</p>
-    <p class="md:text-lg xl:text-xl">Having a PhD done around Web-based GIS (Geographic Information System), having spatial problems won't cause any roadblocks. From creating traditional GIS models to planning complete Web GIS solutions, I'm capable and happy to help.</p>
+    <p class="md:text-lg xl:text-xl">Having a PhD done around Web-based GIS (Geographic Information System), spatial problems won't cause any roadblocks. From creating traditional GIS models to planning complete Web GIS solutions, I'm capable and happy to help.</p>
     <span attribution>Photo by <a href="https://unsplash.com/@geojango_maps?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">GeoJango Maps</a> on <a href="https://unsplash.com/photos/person-holding-red-round-medication-pill-Z8UgB80_46w?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></span>
 </div>
 
@@ -120,7 +120,7 @@
 <div class="hero-section w-full mt-10 text-center md:text-left" [background]="'assets/bg-lecture.jpg'" [flip]="true">
     <h1 class="text-2xl md:text-3xl">Love to share</h1>
     <p class="md:text-lg xl:text-xl pb-4">With a teaching history of almost a decade mostly pivoting around teaching cutting-edge software development and architecture to international computer science bachelor candidates, quality mentoring is always in the picture.</p>
-    <p class="md:text-lg xl:text-xl">Finding teching methods providing the best value in such a practice-oriented fast evolving field is a big challenge. My teaching habits both in and out of the university are based on experience rather than textbooks. Material is created and adjusted on the go, and tries to encompass both most recent trends and my most recent experience in patterns and best practices.</p>
+    <p class="md:text-lg xl:text-xl">Finding teaching methods providing the best value in such a practice-oriented fast evolving field is a big challenge. My teaching habits both in and out of the university are based on experience rather than textbooks. Material is created and adjusted on the go, and tries to encompass both most recent trends and my most recent experience with patterns and best practices.</p>
     <span attribution>Photo by <a href="https://unsplash.com/@dylandgillis?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Dylan Gillis</a> on <a href="https://unsplash.com/photos/people-sitting-on-chair-in-front-of-table-while-holding-pens-during-daytime-KdeqA3aTnBY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
     </span>
 </div>
