More about content

--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -154,7 +154,7 @@
         <p class="text-justify lg:text-left md:text-lg xl:text-xl mb-6 lg:mb-10">Sometimes, all of us need a little help, no matter if you are
             directing a multinational company, a small family business, or a particle collider. If you need a
             quick look on a software issue from an outside expert, make sure to reach out.</p>
-        <a class="btn md:text-lg xl:text-xl" href="#">Need a counsel?</a>
+        <a class="btn md:text-lg xl:text-xl" href="#">Looking for a counsel?</a>
     </div>
 </ng-template>
 
