Add partnership page

--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -92,8 +92,8 @@
         ceasing into basic literacy in business and everyday life, new trends are emerging. As spatial algorithms and
         systems becoming more common, our location awareness is also firmly increasing. Spatiality is slowly becoming an
         essential part of decision making and business intelligence.</p>
-    <p class="md:text-lg xl:text-xl">Having a PhD done around Web-based GIS (Geographic Information System), spatial
-        problems won't cause any roadblocks. From creating traditional GIS models to planning complete Web GIS
+    <p class="md:text-lg xl:text-xl">Having a PhD done around Web-based GIS (Geographic Information System)s, spatial
+        problems won't cause any roadblocks. From creating traditional GIS models to planning and creating complete Web GIS
         solutions, I'm capable and happy to help.</p>
     <span attribution>Photo by <a
             href="https://unsplash.com/@geojango_maps?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">GeoJango
@@ -144,7 +144,7 @@
         <p class="text-justify lg:text-left md:text-lg xl:text-xl mb-6 lg:mb-10">As leader of a high-tech SME, you are on the verge of joining the
             big leagues. You realize the competencies your company will need to scale and wonder, how should you
             build your team up. Let me help you in making this process as pleasant as it should always be.</p>
-        <a class="btn md:text-lg xl:text-xl" href="#">How it works?</a>
+        <a class="btn md:text-lg xl:text-xl" [href]="'/' + PageUrlMapping.PARTNERSHIP">How it works?</a>
     </div>
 </ng-template>
 
