Add partnership text & constrain width

--- a/src/pages/about/about.page.html
+++ b/src/pages/about/about.page.html
@@ -1,2 +1,4 @@
-<div *ngFor="let group of sectionGroups" class="faq w-full p-5 lg:px-10" [prefix]="group.prefix" [sections]="group.sections">
+<div class="max-w-8xl m-auto">
+    <div *ngFor="let group of sectionGroups" class="faq w-full p-5 lg:px-10" [prefix]="group.prefix" [sections]="group.sections">
+    </div>
 </div>
